zapisovaní zpráv do databáze

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
 <div class="container">
     <h2 style="text-align: center; margin-bottom: 90px; text-decoration: solid; color: black;">Messanger</h2>
-    <form style="margin-bottom: 190px;">
+    <form style="margin-bottom: 190px;" action="/" method="post">
         <label for="username">Jméno:</label>
         <input type="text" id="username" name="jmeno">
 
