--- a/views/navigace.ejs
+++ b/views/navigace.ejs
@@ -5,10 +5,12 @@
 
     <nav>
       <ul>
-       <a class="nava" href="/">Poslat zprávu</a>
-       <a class="nava" href="/about">Mé zprávy</a>
+       <a class="nava" href="/poslatZpravu">Poslat zprávu</a>
+       <a class="nava" href="/odeslaneZpravy">Odeslané zprávy</a>
+       <a class="nava" href="/doruceneZpravy">Doručené zprávy</a>
       </ul>
-      <a class="odhlasit" href="/">Odhlásit se</a>
-      <a class="jmeno" href="/"><%- jmeno -%></a>
+
+      <a class="odhlasit" href="/"> <span style="margin-right: 20px; color: black;"> <strong><%- jmeno -%></strong> </span>  Odhlásit se</a>
+
     </nav>
   </header>
