pridaný čas a datum ke každé zpravě

--- a/views/navigace.ejs
+++ b/views/navigace.ejs
@@ -10,7 +10,7 @@
        <a class="nava" href="/doruceneZpravy">Doručené zprávy</a>
       </ul>
 
-      <a class="odhlasit" href="/"> <span style="margin-right: 20px; color: black;"> <strong><%- jmeno -%></strong> </span>  Odhlásit se</a>
+      <a class="odhlasit" href="/"> <span style="margin-right: 20px; color: rgb(255, 0, 0);"> <strong><%- jmeno -%></strong> </span>  Odhlásit se</a>
 
     </nav>
   </header>
