--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,5 +3,8 @@
 <head>
   <title>Messanger</title>
   <link rel="stylesheet" href="../public/main.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 <body>
