--- a/views/doruceneZpravy.ejs
+++ b/views/doruceneZpravy.ejs
@@ -4,17 +4,17 @@
 <script src="../public/scripts.js"></script>
 
 <% for (var i = 0; i < zpravy.length; i++) { %>
-    <% if (zpravy[i].viditelne === 'ano') { %>
+    <% if (zpravy[i].viditelneDorucene === 'ano') { %>
  
         <div style="text-align: center;  "> 
             <div style="min-width: 250px; min-height: 130px; margin: 9px 0; padding: 20px; display: inline-block; text-align: center; background-color: #efeded; border-radius: 10%;">
-                <span style="font-size: 39px; ">📨</span>  <br>
+                <span style="font-size: 39px; ">📩</span>  <br>
+              Odesílatel :  <%- zpravy[i].jmeno_odesilatele -%>   <br>
               Datum : <%- zpravy[i].den_mesic_rok -%>   <br>
               Čas : <%- zpravy[i].hodiny_minuty -%>  <br>
-              Příjemce : <%- zpravy[i].jmeno_prijemce -%>  <br>
               Předmět : <%- zpravy[i].predmet -%> <br>
               Zpráva : <%- zpravy[i].textt -%>  <br>
-              <input style="margin-top: 20px; color: red;" onclick="skrytZpravuOdeslane('<%= zpravy[i].id_zprava %>')" type="button" value="Smazat zprávu">
+              <input style="margin-top: 20px; color: red;" onclick="skrytZpravuDorucene('<%= zpravy[i].id_zprava %>')" type="button" value="Smazat zprávu">
             </div>
           </div>
           
